[package]
name = "pocketwatch"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/pocketwatch"
description = "A simple timer CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.36", features = ["local-offset"] }
clap = { version = "4.5.4", features = ["derive"] }
web-audio-api = "0.43.0"
